--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ jdk:
   - openjdk7
 script:
   - lein2 clean && lein2 with-profile ring ring uberjar
-  - rm -f vnctst-audio4.js && lein2 clean && lein2 with-profile for-js cljsbuild once for-js
+  - rm -f for-npm/vnctst-audio4.js && lein2 clean && lein2 with-profile for-js cljsbuild once for-js
   - lein2 clean && lein2 with-profile demo-prod cljsbuild once demo-prod
 
 # vim:set sw=2 ts=2 sts=2 et:
